plugins {
    id 'java' // 자바 플러그인
    id 'org.springframework.boot' version '3.2.5' // (버전은 예시입니다)
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.domain' // 본인 프로젝트에 맞게 수정
version = '0.0.1-SNAPSHOT' // 본인 프로젝트에 맞게 수정

java {
    sourceCompatibility = '17' // (자바 17 버전 사용)
}

// 롬복을 위한 필수 설정
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// 의존성(라이브러리) 목록
dependencies {
    // 1. 웹 (Controller 등)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // 2. 데이터베이스 (JPA, Entity 등)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // 3. H2 데이터베이스 (개발용)
    runtimeOnly 'com.h2database:h2'

    // 4. 롬복 (Lombok) - 이게 추가된 부분입니다.
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 5. 기본 테스트 라이브러리
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}